--- a/style.css
+++ b/style.css
@@ -8,19 +8,24 @@ body {
 }
 
 h1 {
-    color: #4B3C37;
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
-    color: #332F2E;
+    color: #ffffff;
 }
 
 a {
-    color: #332F2E;
+    color: #ffffff;
     text-decoration: none;
 
 }
 
 footer {
     color: #332F2E;
+}
+
+.big{
+    border: none;
 }
